--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	</parent>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 		<spring.version>2.2.4.RELEASE</spring.version>
 
 		<lombok.version>1.18.20</lombok.version>
@@ -115,6 +115,7 @@
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
+					<release>${java.version}</release>
 				</configuration>
 			</plugin>
 
@@ -125,7 +126,12 @@
 					<execution>
 						<goals>
 							<goal>build-info</goal>
+							<goal>repackage</goal>
 						</goals>
+						<configuration>
+							<classifier>spring-boot</classifier>
+							<mainClass>lv.savchuk.weatherbyip.Application</mainClass>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
