--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,11 @@
 client:
+  ip-api:
+    url: http://ip-api.com/json
   ip-stack:
+    url: http://api.ipstack.com
     api-key: bce3c57a13c16cfe79cbf7e467463036
   open-weather-map:
+    url: http://api.openweathermap.org/data/2.5
     api-key: f5e21b7939b3e90c67869841245de61d
 logging:
   level:
@@ -23,7 +27,7 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        ddl-auto: none
+        ddl-auto: create-drop
         format_sql: true
         use_sql_comments: true
     database-platform: org.hibernate.dialect.H2Dialect
