--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,13 +23,15 @@ feign:
       default:
         loggerLevel: FULL
 spring:
+  flyway:
+    enabled: false
   jpa:
     show-sql: true
     properties:
       hibernate:
         ddl-auto: create-drop
         format_sql: true
-        use_sql_comments: true
+        use_sql_comments: false
     database-platform: org.hibernate.dialect.H2Dialect
   datasource:
     platform: h2
