--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
 		<!-- TESTING -->
 		<assertj.version>3.20.2</assertj.version>
 		<mockito.version>3.11.2</mockito.version>
+		<powermock.version>2.0.4</powermock.version>
+		<junit.version>4.12</junit.version>
 	</properties>
 
 	<dependencies>
@@ -103,6 +105,24 @@
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<version>${mockito.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4</artifactId>
+			<version>${powermock.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito2</artifactId>
+			<version>${powermock.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
