Added FlyWay migration scripts

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,7 @@ feign:
         loggerLevel: FULL
 spring:
   flyway:
-    enabled: false
+    enabled: true
   jpa:
     show-sql: true
     properties:
